# funcheck

./: .drone.star  .drone.yml  .gitignore  BUILD.bazel  README.md  Taskfile.yml  WORKSPACE  go.mod  go.sum  main.go
assigncheck/: BUILD.bazel  assigncheck.go  assigncheck_test.go
assigncheck/testdata/: example.go  new.go
cmd/assigncheck/: BUILD.bazel  main.go
prettyprint/: README.md  prettyprint.go  prettyprint_test.go
prettyprint/testdata/: example.go
