load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["assigncheck.go"],
    importpath = "git.ramonr.ch/ramon/bachelor/work/funcheck/assigncheck",
    visibility = ["//visibility:public"],
    deps = ["@org_golang_x_tools//go/analysis:go_default_library"],
)
