load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "git.ramonr.ch/ramon/bachelor/work/funcheck/cmd/assigncheck",
    visibility = ["//visibility:private"],
    deps = [
        "//assigncheck:go_default_library",
        "@org_golang_x_tools//go/analysis/singlechecker:go_default_library",
    ],
)

go_binary(
    name = "assigncheck",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
